--- a/index.html
+++ b/index.html
@@ -323,11 +323,7 @@
             document.getElementById('order-message').innerText = 'Error placing order!';
             return;
         }
-        /*sound.volume = 0.2
-        sound.play
-         sound.onended = function(){
-                sound.muted = 1.0; // Unmute audio
-            };*/
+        sound.play();
         // Retrieve existing orders from localStorage
         let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
         // Add the new order ID to the list
