--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -228,20 +227,19 @@
         document.getElementById('welcome-popup').style.display = 'none';
         document.getElementById('menu').style.display = 'block';
             // Play intro sound muted
-        console.log(`Sound muted: ${sound.muted}`)
             welcome.play();
                 await fetchDrinks();
             renderDrinkCards();
-        console.log(`Sound muted: ${sound.muted}`)
+            sound.muted = true; // Mute audio
             sound.play().catch(error => {
                 console.error('Error playing intro sound:', error);
             });
 
             sound.onended = function(){
                 sound.muted = false; // Unmute audio
-                console.log(`Sound muted: ${sound.muted}`)
             };
         });
+
     async function fetchDrinks() {
         const { data, error } = await supabase
             .from('drinks')
@@ -262,11 +260,11 @@
         drinksData.forEach(drink => {
             const card = document.createElement('div');
             card.className = 'drink-card';
-            card.innerHTML = `
+            card.innerHTML = 
                 <h3>${drink.name}</h3>
                 <p>${drink.description.substring(0, 50)}...</p>
                 <button onclick="viewDrink('${drink.name}')">View this Drink</button>
-            `;
+            ;
             drinkCardsContainer.appendChild(card);
         });
     }
@@ -275,8 +273,8 @@
         const drink = drinksData.find(d => d.name === drinkName);
         if (drink) {
             document.getElementById('drink-name').innerText = drink.name;
-            document.getElementById('drink-description').innerText = `Description: ${drink.description}`;
-            document.getElementById('drink-ingredients').innerText = `Ingredients: ${drink.ingredients}`;
+            document.getElementById('drink-description').innerText = Description: ${drink.description};
+            document.getElementById('drink-ingredients').innerText = Ingredients: ${drink.ingredients};
             document.getElementById('drink-details').style.display = 'block';
             document.getElementById('menu').style.display = 'none';
         }
@@ -322,7 +320,7 @@
             document.getElementById('order-message').innerText = 'Error placing order!';
             return;
         }
-        sound.play();
+
         // Retrieve existing orders from localStorage
         let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
         // Add the new order ID to the list
@@ -348,104 +346,89 @@
     function closePopup(popupId) {
         const popup = document.getElementById(popupId);
         if (popup) {
-            popup.classList.remove('show');
+   popup.classList.remove('show');
             if (popupId === 'success-popup') {
                 document.getElementById('order-form').style.display = 'none';
                 document.getElementById('menu').style.display = 'block';
+        }
+    }
+
+    // Poll for order status
+    async function checkOrderStatus() {
+        const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        if (orderIds.length > 0) {
+            for (const userOrderId of orderIds) {
+                const { data: order, error } = await supabase
+                    .from('orders')
+                    .select('*')
+                    .eq('id', userOrderId)
+                    .single();
+
+                if (error) {
+                    if (error.code === 'PGRST116') {
+                        document.title = "Your order is complete"
+                        // Treat PGRST116 error as a completed order
+                        if (!localStorage.getItem('completeNotify')) {
+                            localStorage.setItem('completeNotify', 'true');
+                            playSound(); // Play sound for completed
+                            showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
+                            // Remove the completed order ID
+                            removeOrderFromLocalStorage(userOrderId);
+                        }
+                    } else {
+                        console.error(error);
+                    }
+                    continue;
+                }
+
+                if (order) {
+                    if (order.status === 'inprogress') {
+                        document.title = "Order in progress"
+                        if (!localStorage.getItem('inprogressNotify')) {
+                            localStorage.setItem('inprogressNotify', 'true');
+                            playSound(); // Play sound for in progress
+                            showPopup('inprogress-popup');
+                        }
+                    } else if (order.status === 'completed') {
+                        if (!localStorage.getItem('completeNotify')) {
+                            localStorage.setItem('completeNotify', 'true');
+                            playSound(); // Play sound for completed
+                            showPopup('completed-popup');
+                            // Reset notification flags
+                            resetNotificationFlags();
+                            removeOrderFromLocalStorage(userOrderId);
+                        }
+                    }
+                }
             }
         }
     }
 
-// Poll for order status
-async function checkOrderStatus() {
-    const orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-    if (orderIds.length > 0) {
-        for (const userOrderId of orderIds) {
-            const { data: order, error } = await supabase
-                .from('orders')
-                .select('*')
-                .eq('id', userOrderId)
-                .single();
-
-            if (error) {
-                if (error.code === 'PGRST116') {
-                    document.title = "Your order is complete";
-                    if (!localStorage.getItem('completeNotify')) {
-                        localStorage.setItem('completeNotify', 'true');
-                        triggerSoundAndPopup('completed-popup');
-                        removeOrderFromLocalStorage(userOrderId);
-                    }
-                } else {
-                    console.error(error);
-                }
-                continue;
-            }
-
-            if (order) {
-                if (order.status === 'inprogress') {
-                    document.title = "Order in progress";
-                    if (!localStorage.getItem('inprogressNotify')) {
-                        localStorage.setItem('inprogressNotify', 'true');
-                        triggerSoundAndPopup('inprogress-popup');
-                    }
-                } else if (order.status === 'completed') {
-                    document.title = "Your order is complete";
-                    if (!localStorage.getItem('completeNotify')) {
-                        localStorage.setItem('completeNotify', 'true');
-                        triggerSoundAndPopup('completed-popup');
-                        removeOrderFromLocalStorage(userOrderId);
-                    }
-                }
-            }
+    function removeOrderFromLocalStorage(orderId) {
+        let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
+        orderIds = orderIds.filter(id => id !== orderId);
+        if (orderIds.length > 0) {
+            localStorage.setItem('orderIds', JSON.stringify(orderIds));
+        } else {
+            localStorage.removeItem('orderIds');
         }
     }
-}
 
-// Function to trigger sound and popup
-function triggerSoundAndPopup(popupId) {
-    // Ensure the sound is played by a user interaction
-    playSound();
-    showPopup(popupId);
-}
-
-// Handle visibility change
-document.addEventListener('visibilitychange', () => {
-    if (document.visibilityState === 'visible') {
-        // Recheck order status when user returns to the page
-        checkOrderStatus();
+    function resetNotificationFlags() {
+        localStorage.removeItem('inprogressNotify');
+        localStorage.removeItem('completeNotify');
     }
-});
 
-// Function to remove order from local storage
-function removeOrderFromLocalStorage(orderId) {
-    let orderIds = JSON.parse(localStorage.getItem('orderIds')) || [];
-    orderIds = orderIds.filter(id => id !== orderId);
-    if (orderIds.length > 0) {
-        localStorage.setItem('orderIds', JSON.stringify(orderIds));
-    } else {
-        localStorage.removeItem('orderIds');
-    }
-    resetNotificationFlags();
-}
-
-// Reset notification flags
-function resetNotificationFlags() {
-    localStorage.removeItem('inprogressNotify');
-    localStorage.removeItem('completeNotify');
-}
-
-// Function to play sound
-function playSound() {
-    // Play the sound only if the document is visible
-    if (document.visibilityState === 'visible') {
+    function playSound() {
+        // Ensure the sound is played by a user interaction
         sound.play().catch(error => {
             console.error('Failed to play sound:', error);
         });
     }
-}
 
-// Regularly check order status
-setInterval(checkOrderStatus, 5000); // Check every 5 seconds
+    setInterval(checkOrderStatus, 5000); // Check every 5 seconds
 </script>
 </body>
 </html>
