--- a/index.html
+++ b/index.html
@@ -120,46 +120,43 @@
             background-color: #218838;
         }
         /* Drink cards styling */
-        #drink-cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 10px;
-        }
-        .drink-card {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 15px;
-            width: 100%;
-            max-width: 180px;
-            text-align: center;
-        }
-        .drink-card h3 {
-            margin: 0;
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-        .drink-card p {
-            font-size: 14px;
-            color: #666;
-        }
-        .drink-card button {
-            background-color: #007BFF;
-            margin-top: 10px;
-            width: 100%;
-        }
-        .drink-card button:hover {
-            background-color: #0056b3;
-        }
-        @media (max-width: 600px) {
-            #menu, #order-form, #drink-details {
-                width: 90%;
-            }
-            .popup {
-                width: 90%;
-            }
-        }
+#drink-cards-container {
+    max-height: 400px; /* Set the max height for the scrollable area */
+    overflow-y: auto;  /* Enable vertical scrolling if content overflows */
+    margin-bottom: 20px; /* Optional: adds space below the container */
+    padding-right: 10px; /* Optional: to prevent content from being hidden behind the scrollbar */
+}
+
+#drink-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+}
+
+/* Adjust the .drink-card style for a better scrolling experience */
+.drink-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    width: 100%;
+    max-width: 180px;
+    text-align: center;
+    margin-bottom: 10px; /* Space between cards */
+}
+
+@media (max-width: 600px) {
+    #menu, #order-form, #drink-details {
+        width: 90%;
+    }
+    .popup {
+        width: 90%;
+    }
+    #drink-cards-container {
+        max-height: 300px; /* Adjust height for smaller screens */
+    }
+}
     </style>
 </head>
 <body>
@@ -170,10 +167,13 @@
         <button id="explore-button">Explore Drink Selection</button>
     </div>
 
-    <div id="menu">
-        <h1>Drink Menu</h1>
+<div id="menu">
+    <h1>Drink Menu</h1>
+    <div id="drink-cards-container">
         <div id="drink-cards"></div>
     </div>
+</div>
+
 
     <div id="drink-details">
         <h2 id="drink-name"></h2>
