--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         event.preventDefault();
         const drink = document.getElementById('drink').value;
         const id = Math.floor(1000 + Math.random() * 9000); // Generate a 4-digit ID
-
+        welcome.play();
         const { data, error } = await supabase
             .from('orders')
             .insert([{ id, drink, status: 'pending' }]);
