--- a/index.html
+++ b/index.html
@@ -386,8 +386,7 @@ function closePopup(popupId) {
                 }
 
                 if (order) {
-                    if (order.status === 'inprogress') {
-                        document.title = "(CLICK HERE) Order in progress"
+                    if (order.status === 'inprogress') { document.title = "(CLICK HERE) Order in progress"
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
                             playSound(); // Play sound for in progress
