--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="/Design.png"/>
-    <title>User Order System</title>
+    <title>(CLICK HERE) Order in progress</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -226,6 +226,7 @@
     document.getElementById('explore-button').addEventListener('click', async () => {
         document.getElementById('welcome-popup').style.display = 'none';
         document.getElementById('menu').style.display = 'block';
+        document.title = "IdlePOS";
             // Play intro sound muted
             welcome.play();
                 await fetchDrinks();
@@ -368,7 +369,7 @@ function closePopup(popupId) {
 
                 if (error) {
                     if (error.code === 'PGRST116') {
-                        document.title = "(CLICK HERE) Order complete"
+                        document.title = "(CLICK HERE) Order complete";
                         // Treat PGRST116 error as a completed order
                         if (!localStorage.getItem('completeNotify')) {
                             localStorage.setItem('completeNotify', 'true');
@@ -386,10 +387,10 @@ function closePopup(popupId) {
                 }
 
                 if (order) {
-                    if (order.status === 'inprogress') { document.title = "(CLICK HERE) Order in progress"
+                    if (order.status === 'inprogress') {
+                        document.title = "(CLICK HERE) Order in progress";
                         if (!localStorage.getItem('inprogressNotify')) {
                             localStorage.setItem('inprogressNotify', 'true');
-                            document.title = "(CLICK HERE) Order in progress"
                             playSound(); // Play sound for in progress
                             showPopup('inprogress-popup');
                         }
