--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
     <div id="success-popup" class="popup">
         <div class="checkmark">&#10003;</div>
         <div class="title">Order Placed Successfully</div>
-        <div class="message">Your Order ID is <span id="order-id"></span>. You will get notifications when your drink is in progress and when it is ready! Please try to keep this app open!</div>
+        <div class="message">Your Order ID is <span id="order-id"></span>. You will get notifications when your drink is in progress and when it is ready!</div>
+        <h3>Please keep the app open!</h3>
         <button onclick="closePopup('success-popup')">Close</button>
     </div>
     <div id="inprogress-popup" class="popup">
