--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
             font-weight: bold;
             margin-bottom: 10px;
         }
+        .popup .subtitle {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 5px;
+        }
         .popup .message {
             margin-bottom: 20px;
             font-size: 16px;
