--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="checkmark">&#10003;</div>
         <div class="title">Order Placed Successfully</div>
         <div class="message">Your Order ID is <span id="order-id"></span>. You will get notifications when your drink is in progress and when it is ready!</div>
-        <h3>Please keep the app open!</h3>
+        <div class="subtitle">Please keep the app open!</div>
         <button onclick="closePopup('success-popup')">Close</button>
     </div>
     <div id="inprogress-popup" class="popup">
