--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
 
     <div id="order-form">
         <h2>Order Form</h2>
+        <h3>Estimated wait time: <span id="wait-time"></span> minutes.</h3>
+        <p>This is just an estimate. Some drinks may take longer.</p>
         <form id="drink-form">
             <label for="drink">Select Drink:</label>
             <select id="drink" name="drink"></select>
@@ -359,7 +361,24 @@ function closePopup(popupId) {
         }
     }
 }
+const waitTime = 0;
+const waitTimeDisplay = document.getElementById('wait-time');
+setInterval(async () => {
+    // Query the orders table to get the count of entries
+    const { count, error } = await supabase
+        .from('orders')
+        .select('*', { count: 'exact' });
 
+    if (error) {
+        console.error('Error fetching order count:', error);
+        return;
+    }
+
+    // Multiply the count by 3 and store it in the variable
+    waitTime = count * 3;
+    waitTimeDisplay.innerText = waitTime;
+    console.log(`Multiplied Order Count: ${waitTime}`);
+}, 5000); // 5000ms = 5 seconds
 
     // Poll for order status
     async function checkOrderStatus() {
