--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ setInterval(async () => {
     }
 
     // Multiply the count by 3 and store it in the variable
-    waitTime = count * 3;
+    waitTime = count * 3 + 3;
     waitTimeDisplay.innerText = waitTime;
     console.log(`Multiplied Order Count: ${waitTime}`);
 }, 5000); // 5000ms = 5 seconds
