--- a/staffpos1.html
+++ b/staffpos1.html
@@ -27,6 +27,14 @@
         #order-items li, #ingredients-list li {
             margin-bottom: 10px;
             font-size: 16px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .timer {
+            font-size: 14px;
+            color: #666;
+            margin-left: 10px;
         }
         button {
             background-color: #007BFF;
@@ -74,10 +82,24 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script>
-        // Initialize Supabase
-        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
-
+        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'YOUR_SUPABASE_KEY');
         let currentOrderId = localStorage.getItem('currentOrderId') || null;
+        let timers = {};
+
+        function formatTime(seconds) {
+            const minutes = Math.floor(seconds / 60);
+            const sec = seconds % 60;
+            return `${minutes}m ${sec}s`;
+        }
+
+        function startTimer(orderId, createdAt) {
+            const startTime = new Date(createdAt).getTime();
+            timers[orderId] = setInterval(() => {
+                const currentTime = Date.now();
+                const elapsedSeconds = Math.floor((currentTime - startTime) / 1000);
+                document.getElementById(`timer-${orderId}`).innerText = formatTime(elapsedSeconds);
+            }, 1000);
+        }
 
         async function loadOrders() {
             const { data: orders, error } = await supabase
@@ -100,7 +122,7 @@
                 noOrdersMessage.style.display = 'none';
                 orders.forEach(order => {
                     const li = document.createElement('li');
-                    li.innerText = `Order ID: ${order.id} - Drink: ${order.drink}`;
+                    li.innerHTML = `Order ID: ${order.id} - Drink: ${order.drink} <span id="timer-${order.id}" class="timer"></span>`;
                     
                     const acceptButton = document.createElement('button');
                     acceptButton.innerText = 'Accept';
@@ -109,6 +131,8 @@
                     
                     li.appendChild(acceptButton);
                     orderItems.appendChild(li);
+
+                    startTimer(order.id, order.created_at);
                 });
             }
 
@@ -128,83 +152,57 @@
             }
         }
 
-async function showOrderDetails(order) {
-    // Show the order details
-    document.getElementById('order-details').style.display = 'block';
-    document.getElementById('order-info').innerText = `Order ID: ${order.id} - Drink: ${order.drink}`;
+        async function showOrderDetails(order) {
+            document.getElementById('order-details').style.display = 'block';
+            document.getElementById('order-info').innerText = `Order ID: ${order.id} - Drink: ${order.drink}`;
+            const ingredientsList = document.getElementById('ingredients-list');
+            ingredientsList.innerHTML = ''; // Clear previous list
 
-    // Display ingredients list
-    const ingredientsList = document.getElementById('ingredients-list');
-    ingredientsList.innerHTML = ''; // Clear previous list
+            const { data: drinkDetails, error } = await supabase
+                .from('drinks')
+                .select('ingredients')
+                .eq('name', order.drink)
+                .single();
 
-    // Fetch ingredients from Supabase based on the drink in the order
-    const { data: drinkDetails, error } = await supabase
-        .from('drinks')
-        .select('ingredients')
-        .eq('name', order.drink)
-        .single();
+            if (error) {
+                console.error('Error fetching ingredients:', error);
+                return;
+            }
 
-    if (error) {
-        console.error('Error fetching ingredients:', error);
-        return;
-    }
+            const ingredientsArray = drinkDetails.ingredients.split(',').map(ingredient => ingredient.trim());
 
-    // Parse and display the ingredients list
-    const ingredientsArray = drinkDetails.ingredients.split(',').map(ingredient => ingredient.trim());
+            ingredientsArray.forEach(ingredient => {
+                const li = document.createElement('li');
+                li.innerText = ingredient;
+                ingredientsList.appendChild(li);
+            });
 
-    ingredientsArray.forEach(ingredient => {
-        const li = document.createElement('li');
-        li.innerText = ingredient;
-        ingredientsList.appendChild(li);
-    });
+            document.getElementById('complete-button').onclick = () => completeOrder(order.id);
+        }
 
-    // Assign complete order function to the button
-    document.getElementById('complete-button').onclick = () => completeOrder(order.id);
-}
+        async function acceptOrder(id) {
+            if (currentOrderId) return;
 
-async function acceptOrder(id) {
-    console.log(`Accepting order with ID: ${id}`);
-    if (currentOrderId) {
-        // User is already working on an order
-        return;
-    }
+            const { data, error } = await supabase
+                .from('orders')
+                .update({ status: 'inprogress' })
+                .match({ id });
 
-    // Update order status to 'inprogress'
-    const { data, error } = await supabase
-        .from('orders')
-        .update({ status: 'inprogress' })
-        .match({ id });
+            if (error) {
+                console.error('Error updating order status:', error);
+                return;
+            }
 
-    if (error) {
-        console.error('Error updating order status:', error);
-        return;
-    }
+            localStorage.setItem('currentOrderId', id);
+            currentOrderId = id;
 
-    // Save the current order ID in local storage
-    localStorage.setItem('currentOrderId', id);
-    currentOrderId = id;
+            clearInterval(timers[id]); // Stop the timer
+            delete timers[id];
 
-    // Notify user via serverless function (if implemented)
+            loadOrders();
+        }
 
-    // Show order details after updating status
-    const { data: orderDetails, error: detailsError } = await supabase
-        .from('orders')
-        .select('*')
-        .eq('id', id)
-        .single();
-
-    if (detailsError) {
-        console.error('Error loading order details:', detailsError);
-        return;
-    }
-
-    showOrderDetails(orderDetails);
-
-    // Reload orders
-    loadOrders();
-}
         async function completeOrder(id) {
-            console.log(`Completing order with ID: ${id}`);
             const { data, error } = await supabase
                 .from('orders')
                 .delete()
@@ -215,13 +213,10 @@ async function acceptOrder(id) {
                 return;
             }
 
-            // Remove the current order ID from local storage
             localStorage.removeItem('currentOrderId');
             currentOrderId = null;
 
-            // Hide order details
             document.getElementById('order-details').style.display = 'none';
-            // Reload orders
             loadOrders();
         }
 
@@ -229,7 +224,6 @@ async function acceptOrder(id) {
             loadOrders();
         });
 
-        // Check for new orders every 5 seconds
         setInterval(loadOrders, 5000);
     </script>
 </body>
