--- a/staffpos1.html
+++ b/staffpos1.html
@@ -82,7 +82,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script>
-        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'YOUR_SUPABASE_KEY');
+        const supabase = window.supabase.createClient('https://utgmmvofnginuwvzajig.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InV0Z21tdm9mbmdpbnV3dnphamlnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3MjE5NTczMzksImV4cCI6MjAzNzUzMzMzOX0.YWH5Ceiz0OI_h8M6wG1M2UsDXM_43i5UdopmYLGO7aE');
         let currentOrderId = localStorage.getItem('currentOrderId') || null;
         let timers = {};
 
