--- a/staffpos1.html
+++ b/staffpos1.html
@@ -76,7 +76,7 @@
     <div id="order-details">
         <h2>Order Details</h2>
         <p id="order-info" class="order-info"></p>
-        <div id="ingredients-list" class="ingredients"></div>
+        <ul id="ingredients-list" class="ingredients"></ul>
         <button id="complete-button">Complete Order</button>
     </div>
 
