--- a/staffpos1.html
+++ b/staffpos1.html
@@ -30,6 +30,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
+            color: blue;
         }
         #ingredients-list {
             list-style-type: disc;
