--- a/staffpos1.html
+++ b/staffpos1.html
@@ -24,17 +24,18 @@
         h1, h2 {
             color: #007BFF;
         }
-        #order-items li, #ingredients-list li {
+        #order-items li {
             margin-bottom: 10px;
             font-size: 16px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            color: blue;
         }
-        #ingredients-list {
-            list-style-type: disc;
-            padding-left: 20px;
+        #ingredients-list li {
+            margin-bottom: 10px;
+            font-size: 16px;
+            list-style-type: disc; /* Ensure bullet points are displayed */
+            padding-left: 20px; /* Offset the text to make room for the bullet */
         }
         .timer {
             font-size: 14px;
