--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
     <!-- Welcome Popup -->
     <div id="welcome-popup">
         <h1>Welcome!</h1>
-        <p>We're glad to have you here at Steve and Stacy's Year End Party. Click the button below to explore our drink selection.</p>
-        <button id="explore-button">Explore Drink Selection</button>
+        <p>Welcome to Steve and Stacie's fall party on beautiful Weaver Lake. We're so glad you could join us again this year!</p>
+        <p>Please enjoy the live music of Vinnie Rose, and click below to order from the cocktail menu. (Beer and seltzers available at the bar/coolers.)</p>
+        <button id="explore-button">Click to Explore/Order Adult Beverages</button>
     </div>
 
 <div id="menu">
